<resources>
    <string name="app_name">formura notes</string>
    <string name="add_to_note">add to note>></string>
    <string name="edit">EDIT</string>
    <string name="save">save</string>
    <string name="delete">Delete</string>
    <string name="enter_the_site_name">enter_the_site_name</string>

    <string name="enter_the_start_amount">enter the start amount</string>
    <string name="enter_the_amount_name">enter the amount name</string>
    <string name="enter_the_amount">enter the amount</string>

    <string name="field_one">field one</string>
    <string name="field_second">field second</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="update">Update</string>
    <string name="sava">Sava</string>

    <string name="site_name">siteName</string>
    <string name="start_amount">startAmount</string>

    <string name="name">name</string>
    <string name="amount">amount</string>
    <string name="balance">balance</string>
    <string name="set_the_date">set the date</string>
</resources>