<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddSite">
    <EditText
        android:id="@+id/siteName_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:ems="10"
        android:layout_marginStart="20dp"
        android:hint="@string/enter_the_site_name"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="488dp" />

    <EditText
        android:id="@+id/startAmount_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textColorHint="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintWidth_default="wrap"
        android:ems="10"
        android:autofillHints="creditCardNumber"
        android:maxWidth="488dp"
        android:hint="@string/enter_the_start_amount"
        android:inputType="number"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

     <EditText
        android:id="@+id/amountName_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
         app:layout_constraintWidth_default="wrap"
         android:layout_marginStart="20dp"
         android:textColorHint="@color/black"
        android:ems="10"
        android:maxWidth="488dp"
        android:autofillHints="name"
        android:hint="@string/enter_the_amount_name"
        android:inputType="text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <EditText
        android:id="@+id/amount_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        app:layout_constraintWidth_default="wrap"
        android:ems="10"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@color/white"
        android:hint="@string/enter_the_amount"
        android:inputType="number"
        android:textSize="20sp"
        android:maxWidth="488dp"
        android:autofillHints="creditCardNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <Button
        android:id="@+id/plusBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <Button
        android:id="@+id/minusBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

</androidx.constraintlayout.widget.ConstraintLayout>


